[package]
name = "terrain-webassembly"
version = "0.1.0"
edition = "2021"

description = "Visualization of OpenSimplex2"
authors = ["Marco Cella phcella@libero.it"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cgmath = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"